# handover-sim

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
examples/: README.md  all_icra2022_results_eval.sh  demo_benchmark_env.py  demo_benchmark_wrapper.py  demo_handover_env.py  demo_trajectory.py  evaluate_benchmark.py  generate_mp4_from_jpg.sh  render_benchmark.py  render_benchmark_egl.sh  run_benchmark_gaddpg_hold.py  run_benchmark_gaddpg_wo_hold.py  run_benchmark_omg_planner.py  run_benchmark_yang_icra2021.py
handover/: __init__.py  benchmark_evaluator.py  benchmark_runner.py  benchmark_wrapper.py  cmd.py  config.py  dex_ycb.py  handover_env.py  mano.py  mano_hand_body.py  panda.py  py.typed  table.py  transform3d.py  ycb.py
handover/data/: README.md  cache_dex_ycb_data.py  compile_assets.sh  compile_mano_assets.py  compile_table_assets.py  compile_ycb_assets.py  compile_ycb_models.py  stabilize_dex_ycb_data.py
handover/envs/: benchmark_wrapper.py  config.py  dex_ycb.py  handover_env.py  mano.py  mano_hand_body.py  table.py  ycb.py
handover/robots/: panda.py
handover/utils/: cmd.py  stabilizer.py  transform3d.py
results/: .gitignore  fetch_icra2022_results.sh
src/__python_project_template__/: __init__.py
tests/: __init__.py  __python_project_template___version_test.py  handover_sim_version_test.py
