[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

# See the `setuptools_scm` documentation for the description of the schemes used below.
# https://pypi.org/project/setuptools-scm/
# NOTE: If these values are updated, they need to be also updated in `handover/__init__.py`.
[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "dirty-tag"

[tool.black]
line-length = 100
extend-exclude = "deprecated/"

[tool.isort]
# Multi line output mode 3 is used to conform with Black. See
# https://github.com/PyCQA/isort#multi-line-output-modes
multi_line_output = 3
profile = "black"
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third Party"
import_heading_firstparty = "SRL"
import_heading_localfolder = "Local Folder"
line_length = 100

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true
exclude = [
	"venv",
]

[[tool.mypy.overrides]]
module = [
	"setuptools",
	"setuptools_scm",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = ["OMG-Planner"]
python_files = ["*_test.py"]
