# Copyright (c) 2021, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
#
# NVIDIA CORPORATION, its affiliates and licensors retain all intellectual
# property and proprietary rights in and to this material, related
# documentation and any modifications thereto. Any use, reproduction,
# disclosure or distribution of this material and related documentation
# without an express license agreement from NVIDIA CORPORATION or
# its affiliates is strictly prohibited.

# Additional files that need to be included in the package distribution must be
# listed in the MANIFEST.in file.
#
# References:
# * https://newbedev.com/how-include-static-files-to-setuptools-python-package

[metadata]

# Configure specific project settings
name = nvidia___python_project_template__
author = NVIDIA Seattle Robotics Lab
description = <brief project description>
url = https://gitlab-master.nvidia.com/srl/__python_project_template__
license = NVIDIA

# Configure general project settings
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE

# List of classifiers can be found here:
# https://pypi.org/classifiers/
classifiers =
  License :: Other/Proprietary License
  Operating System :: OS Independent
  Intended Audience :: Developers
  Natural Language :: English
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Robotics

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

[options]
install_requires =
  setuptools_scm==6.4.2
  # (add additional dependencies here)
packages = find_namespace:
package_dir =
  = src
include_package_data = True

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
ci =
  anybadge==1.8.0
  black==21.12b0
  build==0.7.0
  graphviz==0.19.1
  flake8==4.0.1
  flake8-copyright==0.2.2
  flake8-docstrings==1.6.0
  flake8-isort==4.1.1
  mypy==0.931
  pytest==6.2.5
  pytest-cov==3.0.0
  sphinx==4.3.0
  sphinx_rtd_theme==1.0.0
  twine==3.7.1

dev =
  ipdb
  ipython
  jupyter

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = package.module:function

# NOTE (roflaherty): Flake8 doesn't support pyproject.toml configuration yet.
[flake8]
select = E,F,W,C,D,I
copyright-check = True
# See the following page about NVIDIA's copyright header
# https://confluence.nvidia.com/pages/viewpage.action?pageId=788418816
copyright-regexp = Copyright \(c\) 20\d{2}(?:-20\d{2})?, NVIDIA CORPORATION & AFFILIATES. All rights reserved.\n\#\n\# NVIDIA CORPORATION\, its affiliates and licensors retain all intellectual\n\# property and proprietary rights in and to this material, related\n\# documentation and any modifications thereto. Any use, reproduction,\n\# disclosure or distribution of this material and related documentation\n\# without an express license agreement from NVIDIA CORPORATION or\n\# its affiliates is strictly prohibited.\n[^\s]
max-line-length = 100
docstring-convention = google
exclude = .git,build,deprecated,dist,venv
ignore =
  W503 # (this is deprecated see: https://lintlyci.github.io/Flake8Rules/rules/W503.html)
  E203 # (to be Black compatible)
  E731 # (ignore recommendation to not use lambdas because there is no other way to write a single line function with out warnings)
