# Additional files that need to be included in the package distribution must be
# listed in the MANIFEST.in file.
#
# References:
# * https://newbedev.com/how-include-static-files-to-setuptools-python-package

[metadata]

# Configure specific project settings
name = handover-sim
author = Yu-Wei Chao
description = A simulation environment and benchmark for human-to-robot object handovers
url = https://gitlab-master.nvidia.com/ychao/handover-sim
license = GNU General Public License v3.0

# Configure general project settings
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

# List of classifiers can be found here:
# https://pypi.org/classifiers/
classifiers =
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Robotics

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

[options]
install_requires =
    chumpy==0.70
    gym==0.21.0
    numpy==1.22.2
    pybullet==3.2.1
    PyYAML==6.0
    setuptools_scm==6.4.2
    scipy==1.8.0
    transforms3d==0.3.1
    yacs==0.1.8
packages = find_namespace:
include_package_data = True

[options.extras_require]
dev =
  anybadge==1.8.0
  black==21.12b0
  build==0.7.0
  graphviz==0.19.1
  flake8==4.0.1
  flake8-copyright==0.2.2
  flake8-docstrings==1.6.0
  flake8-isort==4.1.1
  mypy==0.931
  pytest==6.2.5
  pytest-cov==3.0.0
  sphinx==4.3.0
  sphinx_rtd_theme==1.0.0
  twine==3.7.1

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = package.module:function

# NOTE (roflaherty): Flake8 doesn't support pyproject.toml configuration yet.
[flake8]
select = E,F,W,C,D,I
copyright-check = True
max-line-length = 100
docstring-convention = google
exclude = build,venv
ignore =
    E731 # (ignore recommendation to not use lambdas because there is no other way to write a single line function with out warnings)
