# Additional files that need to be included in the package distribution must be
# listed in the MANIFEST.in file.
#
# References:
# * https://newbedev.com/how-include-static-files-to-setuptools-python-package

[metadata]

# Configure specific project settings
name = handover-sim
author = Yu-Wei Chao
description = A simulation environment and benchmark for human-to-robot object handovers
url = https://github.com/NVlabs/handover-sim
license = BSD 3-Clause License

# Configure general project settings
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

# List of classifiers can be found here:
# https://pypi.org/classifiers/
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

[options]
install_requires =
    chumpy
    easysim
    gym<=0.23.1
    numpy<=1.23.5
    opencv-python
    pybullet
    PyYAML
    setuptools_scm
    scipy
    tabulate
    transforms3d
    yacs
packages = find_namespace:
include_package_data = True

[options.packages.find]
include = handover

[options.extras_require]
dev =
    anybadge==1.8.0
    black==22.6.0
    build==0.7.0
    docutils==0.17.1 # NOTE(roflahery): Currently needed so the "note" context role behaves correctly. With 0.19.0 the "note" context will capture everything below where it is placed.
    graphviz==0.19.1
    flake8==4.0.1
    flake8-copyright==0.2.2
    flake8-docstrings==1.6.0
    flake8-isort==4.1.1
    flake8-rst-docstrings==0.2.7
    mypy==0.931
    pep8-naming==0.13.2
    pytest==6.2.5
    pytest-cov==3.0.0
    sphinx==5.3.0
    sphinx_rtd_theme==1.0.0
    twine==3.7.1

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = package.module:function

# NOTE (roflaherty): Flake8 doesn't support pyproject.toml configuration yet.
[flake8]
select = E,F,W,C,D,I,N,RST
copyright-check = True
copyright-regexp = # Copyright \(c\) 20\d{2}(?:-20\d{2})? NVIDIA CORPORATION & AFFILIATES. All rights reserved.\n#\n# Licensed under the BSD 3-Clause License \[see LICENSE for details\].\n
max-line-length = 100
docstring-convention = google
exclude = build,venv
ignore =
    W503 # (this is deprecated, see: https://lintlyci.github.io/Flake8Rules/rules/W503.html)
    E203 # (to be Black compatible)
    E731 # (ignore recommendation to not use lambdas because there is no other way to write a single line function with out warnings)
    RST201,RST203,RST301 # (to be Google Python style compatible, see: https://github.com/peterjc/flake8-rst-docstrings/issues/17)
rst-roles =
    attr
    class
    func
    meth
    mod
    obj
    ref
    term
rst-directives =
    autosummary
    data
    currentmodule
    deprecated
    envvar
    exception
    glossary
    moduleauthor
    plot
    testcode
    versionadded
    versionchanged
rst-substitutions =
    version
# Needed to prevent false N804 and N805 errors when using the `abc` module
# See: https://github.com/pycqa/pep8-naming#options
classmethod-decorators = classmethod,abstractclassmethod
staticmethod-decorators = staticmethod,abstractstaticmethod
